--- a/.github/workflows/cms-workflow.yml
+++ b/.github/workflows/cms-workflow.yml
@@ -22,7 +22,7 @@ jobs:
       - name: install dependancies
         run: |
          python3 -m pip install --upgrade pip
-         pip install -rrequirments.txt
+         pip install -rrequirements.txt 
 
       - name: run test
         run: tox -r
