--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.0.6
 filelock==3.7.1
 flake8==4.0.1
 mccabe==0.6.1
+mysqlclient==2.1.1
 packaging==21.3
 platformdirs==2.5.2
 pluggy==1.0.0
