--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -12,11 +12,10 @@ on:
 
 jobs:
 
-  build:
+  on-success:
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-
       - name: Check Out Repo 
         uses: actions/checkout@v2
 
