--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.5.2
+attrs==21.4.0
+coverage==6.4.2
 distlib==0.3.4
 Django==4.0.6
 django-crispy-forms==1.14.0
 filelock==3.7.1
 flake8==4.0.1
+iniconfig==1.1.1
 mccabe==0.6.1
 mysqlclient==2.1.1
 packaging==21.3
@@ -13,9 +16,13 @@ py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pyparsing==3.0.9
+pytest==7.1.2
+pytest-cov==3.0.0
+pytest-django==4.5.2
 python-dotenv==0.20.0
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
+tomli==2.0.1
 tox==3.25.1
 virtualenv==20.15.1
