tests: pytest & coverage report setup

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,19 @@ exclude =
     config/settings.py,
 max_line_length = 79
 
+[pytest]
+DJANGO_SETTINGS_MODULE = config.settings
+python_files = tests.py test_*.py *_tests.py
+pythonpath = . core
+
 [testenv]
 deps = -r requirements.txt
+passenv = 
+    DYLD_LIBRARY_PATH
 
 commands =
     flake8
+    coverage erase
+    pytest --cov=./ tests/
+    coverage html
+    coverage report --fail-under=10
