--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -1,13 +1,13 @@
 name: CI to Docker Hub
 
 on:
-  pull_request:
+  push:
     branches: 
       - develop
 
 jobs:
 
-  on-success:
+  docker-img:
     runs-on: ubuntu-latest
 
     steps:
