tests: secret key & debug environment variables

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ pythonpath = . core
 [testenv]
 deps = -r requirements.txt
 passenv = 
+    SECRET_KEY,
+    DEBUG,
     MYSQL_NAME,
     MYSQL_USER,
     MYSQL_PASSWORD,
