ci: removed DYLD_LIBRARY_PATH envvar for mysql client

--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,7 @@ passenv =
     MYSQL_PASSWORD,
     MYSQL_HOST,
     MYSQL_ROOT_PASSWORD,
-    MYSQL_PORT,
-    DYLD_LIBRARY_PATH
+    MYSQL_PORT
 
 commands =
     flake8
