chore: remove mysql db environment variables

--- a/tox.ini
+++ b/tox.ini
@@ -20,12 +20,7 @@ deps = -r requirements.txt
 passenv = 
     SECRET_KEY,
     DEBUG,
-    MYSQL_NAME,
-    MYSQL_USER,
-    MYSQL_PASSWORD,
-    MYSQL_HOST,
-    MYSQL_ROOT_PASSWORD,
-    MYSQL_PORT
+    DYLD_LIBRARY_PATH
 
 commands =
     flake8
