--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ max_line_length = 79
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
-pythonpath = . core
+pythonpath = . config
 
 [testenv]
 deps = -r requirements.txt
