ci: added mysql db envvar to build job

--- a/.github/workflows/cms-workflow.yml
+++ b/.github/workflows/cms-workflow.yml
@@ -4,9 +4,18 @@ on:
   - push
 
 jobs:
-  test:
+  
+  build:
+
     runs-on: ubuntu-latest
     env:
+      MYSQL_NAME: ${{ secrets.MYSQL_NAME }}
+      MYSQL_USER: ${{ secrets.MYSQL_USER }}
+      MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+      MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
+      MYSQL_PORT: ${{ secrets.MYSQL_PORT }}
+
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       DEBUG: ${{ secrets.DEBUG }}
 
