--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,12 @@ pythonpath = . core
 [testenv]
 deps = -r requirements.txt
 passenv = 
+    MYSQL_NAME
+    MYSQL_USER
+    MYSQL_PASSWORD
+    MYSQL_ROOT_PASSWORD
+    MYSQL_HOST
+    MYSQL_PORT
     DYLD_LIBRARY_PATH
 
 commands =
